@@ -1,3 +1,9 @@
+2014-08-06  Corinna Vinschen  <corinna@vinschen.de>
+
+	* ntsec.xml (ntsec-mapping): Drop plus-prepended builtin accounts as
+	default setting.  Add short explanation in db_prefix: always mode.
+	Fix a type.  Drop a paragraph with redundant information.
+
 2014-08-03  Yaakov Selkowitz  <yselkowitz@cygwin.com>
 
 	* faq-what.xml (faq.what.who): Remove mention of retired setup
